--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@ body {
 }
 #register,
 #logout {
-  float: right;
+  /* float: right;
   padding: 5px;
   text-decoration: none;
   color: white;
@@ -34,17 +34,19 @@ body {
   margin: auto 15px;
   font-weight: 500;
   width: max-content;
+  padding: 5px 10px; */
 }
 #register:hover {
   background-color: rgb(19, 14, 63);
   border-radius: 5px;
 }
 #logout {
-  outline: none;
+  /* outline: none;
   background-color: #f74b3f;
   border: 1px solid black;
   color: white;
   border-radius: 8px;
+  padding: 5px 10px; */
 }
 #logout:hover {
   background-color: #cc392e;
@@ -131,12 +133,14 @@ textarea:focus {
   padding: 5px;
   bottom: 0px;
   background: #070144 !important;
+  color: rgba(255, 255, 255, 0.56);
   position: fixed;
 }
 
 .footer p {
   margin: auto;
   justify-content: center;
+  font-size: 0.8rem;
 }
 
 .footer > div {
