--- a/css/style.css
+++ b/css/style.css
@@ -24,9 +24,8 @@ body {
   color: white !important;
   font-weight: 500;
 }
-#register,
-#logout {
-  /* float: right;
+#register {
+  float: right;
   padding: 5px;
   text-decoration: none;
   color: white;
@@ -34,7 +33,7 @@ body {
   margin: auto 15px;
   font-weight: 500;
   width: max-content;
-  padding: 5px 10px; */
+  padding: 5px 10px;
 }
 #register:hover {
   background-color: rgb(19, 14, 63);
