--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,8 @@ body {
 }
 
 input:focus,
-textarea:focus {
+textarea:focus,
+select:focus {
   border: 1px solid #6322cb !important;
   box-shadow: 0px 0px 5px #5d22cb !important;
 }
