--- a/css/style.css
+++ b/css/style.css
@@ -36,8 +36,8 @@ body {
   padding: 5px 10px;
 }
 #register:hover {
-  background-color: rgb(19, 14, 63);
-  border-radius: 5px;
+  /* background-color: rgb(19, 14, 63);
+  border-radius: 5px; */
 }
 #logout {
   /* outline: none;
@@ -125,6 +125,38 @@ select:focus {
 }
 .btn {
   width: 100%;
+  border: none !important;
+  box-shadow: none !important;
+  outline: none !important;
+  transition: 0.5s all ease;
+}
+
+.btn-sm {
+  border: none;
+  box-shadow: none;
+  transition: 0.5s all ease;
+}
+
+button:hover {
+  cursor: pointer;
+  border-radius: 6px;
+  box-shadow: 0.5px 0.5px 15px #1900ff5b !important;
+  /* text-shadow: 0px 0px 5px #5d22cb; */
+}
+
+.btn-lg:hover {
+  cursor: pointer;
+  border-radius: 30px;
+  box-shadow: 0.5px 0.5px 15px #1900ff5b !important;
+}
+
+.nav-link {
+  transition: 0.5s all ease;
+}
+
+.nav-link:hover {
+  translate: 0px -3px;
+  scale: 1.025;
 }
 
 .footer {
